--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -18,19 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install llama-index llama-parse llama_deploy llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-utils-workflow\n",
-    "# llama-index-llms-azure-openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Set up ollama\n",
     "!apt-get update && apt-get install tmux vim -y\n",
-    "# !pip3 install llama-index llama-parse llama_deploy llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-llms-azure-openai\n",
+    "!pip3 install llama-index llama-parse llama_deploy llama-index-llms-huggingface llama-index-embeddings-huggingface llama-index-llms-ollama llama-index-embeddings-ollama llama-index-vector-stores-neo4jvector llama-index-graph-stores-neo4j llama-index-finetuning llama-index-utils-workflow \n",
     "!pip3 install sentencepiece protobuf evaluate rouge_score absl-py tensorboardX bitsandbytes peft accelerate python-dotenv graspologic\n",
     "!pip3 install flash-attn --no-build-isolation\n",
     "!curl -fsSL https://ollama.com/install.sh | sh\n"
@@ -173,7 +163,7 @@
     "access_token = os.getenv('HF_TOKEN')\n",
     "llama_api_key = os.getenv('LLAMA_API_KEY')\n",
     "\n",
-    "pdf_urls = [\"/workspace/data/FSI_Factsheet.pdf\", \"/workspace/data/FSI_Press_Release.pdf\", \"/workspace/data/FSI_Rule_proposal.pdf\"]\n",
+    "pdf_urls = [\"/workspace/data/compliance/FSI_Factsheet.pdf\", \"/workspace/data/compliance/FSI_Press_Release.pdf\", \"/workspace/data/compliance/FSI_Rule_proposal.pdf\"]\n",
     "descriptions = [\"Factsheet about newly proposed SEC rule.\", \"Press release regarding newly proposed SEC rule.\", \"The full text of the newly proposed SEC rule.\"]\n",
     "documents_proposal = extract_text_from_pdf(pdf_urls, llama_api_key, llamaparse_kwargs={\"split_by_page\":False}, save_json_path=None)\n",
     "# add metadata to the documents_proposal\n",
@@ -188,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create Datasets"
+    "### Create Distillation Datasets"
    ]
   },
   {
@@ -366,9 +356,9 @@
     "from llama_index.core import Settings\n",
     "\n",
     "embed_model_name = \"dunzhang/stella_en_1.5B_v5\" #7b params\n",
-    "finetuned_embed_model_name = \"/workspace/data/rule_proposal_embedding_model\"\n",
+    "finetuned_embed_model_name = \"/workspace/data/compliance/rule_proposal_embedding_model_gpt\"\n",
     "print(\"loading embed model...\")\n",
-    "proposal_embed_model = HuggingFaceEmbedding(model_name=finetuned_embed_model_name)\n",
+    "# proposal_embed_model = HuggingFaceEmbedding(model_name=finetuned_embed_model_name)\n",
     "rules_embed_model = HuggingFaceEmbedding(model_name=embed_model_name)\n",
     "\n",
     "# Settings.embed_model = embed_model\n",
@@ -427,8 +417,8 @@
     "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query\n",
     "import random\n",
     "\n",
-    "graph_idx_persist_dir = \"/workspace/data/graph_idx\"\n",
-    "graph_store_persist_dir=\"/workspace/data/graph_store\"\n",
+    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_test\"\n",
+    "graph_store_persist_dir= None #\"/workspace/data/graph_store\"\n",
     "\n",
     "Settings.chunk_size = 500\n",
     "Settings.chunk_overlap = 20\n",
@@ -464,10 +454,130 @@
     "\n",
     "if not os.path.exists(graph_idx_persist_dir):\n",
     "    print(\"Deleting all nodes and relationships...\")\n",
-    "    neo4j_query(graph_store, query=\"\"\"MATCH (n) DETACH DELETE n\"\"\")\n",
+    "    neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n",
     "\n",
     "print(\"Creating graphrag index...\")\n",
-    "graph_index = create_neo4j_graphrag(documents, llm, rules_embed_model, kg_extractor, graph_store, graph_idx_persist_dir=graph_idx_persist_dir, graph_store_persist_dir=graph_store_persist_dir, similarity_top_k=3)"
+    "graph_index = create_neo4j_graphrag(documents[:100], llm, rules_embed_model, kg_extractor, graph_store, graph_idx_persist_dir=graph_idx_persist_dir, graph_store_persist_dir=graph_store_persist_dir, similarity_top_k=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core import StorageContext, VectorStoreIndex, PropertyGraphIndex\n",
+    "from rag_utils import create_llama_vector_index_rag\n",
+    "from llama_index.vector_stores.neo4jvector import Neo4jVectorStore\n",
+    "\n",
+    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor, SimpleLLMPathExtractor\n",
+    "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query\n",
+    "import random\n",
+    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to find semantic and literal relationships between the sections. If there are no relationships, return an empty list.\"\n",
+    "kg_extractor = SimpleLLMPathExtractor(\n",
+    "        extract_prompt=extract_prompt,\n",
+    "        llm=llm,\n",
+    "        max_paths_per_chunk=10,\n",
+    "        num_workers=10,\n",
+    "    )\n",
+    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_test\"\n",
+    "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
+    "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
+    "                                       config={\"connection_timeout\": 1000, \"connection_acquisition_timeout\": 1000, \"max_connection_pool_size\": 1000})\n",
+    "neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n",
+    "# vector_index = Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024)\n",
+    "# storage_context = StorageContext.from_defaults(\n",
+    "#     vector_store=vector_index\n",
+    "# )\n",
+    "# index = VectorStoreIndex.from_documents(\n",
+    "#     documents, storage_context=storage_context\n",
+    "# )\n",
+    "graph_index = PropertyGraphIndex.from_documents(documents[:20], \n",
+    "                                                llm=llm,\n",
+    "                                                vector_store=Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024),\n",
+    "                                                property_graph_store=graph_store, \n",
+    "                                                embed_model=rules_embed_model, \n",
+    "                                                kg_extractors=[kg_extractor],\n",
+    "                                                #  transformations=[SentenceSplitter(chunk_size=500, chunk_overlap=50)],\n",
+    "                                                show_progress=True,\n",
+    "                                                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
+    "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
+    "                                       config={\"connection_timeout\": 1000, \"connection_acquisition_timeout\": 1000, \"max_connection_pool_size\": 1000})\n",
+    "\n",
+    "graph_index=PropertyGraphIndex.from_existing(property_graph_store=graph_store,\n",
+    "                                 llm=llm,\n",
+    "                                 vector_store=Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024),\n",
+    "                                 kg_extractor=[ kg_extractor ], \n",
+    "                                 embed_kg_nodes=True,\n",
+    "                                 embed_model=rules_embed_model,\n",
+    "                                 storage_context=StorageContext.from_defaults(persist_dir=graph_idx_persist_dir),\n",
+    "                                 )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if graph_idx_persist_dir is not None: graph_index.storage_context.persist(persist_dir=graph_idx_persist_dir)\n",
+    "# graph_store.persist(\"/workspace/data/compliance/vector_index\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_engine = graph_index.as_query_engine(similarity_top_k=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = query_engine.query(\"what Business day mean?\")\n",
+    "print(response.response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = query_engine.query(\"what Business day mean?\")\n",
+    "print(response.response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_test\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n"
    ]
   },
   {
