--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -87,9 +87,9 @@
     "    except Exception as e: \n",
     "        print(f\"Error pulling model: Is the Ollama server running?\\n{e}\")\n",
     "    \n",
-    "    addtion_kwargs = {\"max_new_tokens\": 4000}\n",
+    "    addtion_kwargs = {\"max_new_tokens\": 2000}\n",
     "    # system_prompt = \"You are an expert at answering questions about rules and regulations regarding Title 17—Commodity and Securities Exchanges: CHAPTER II—SECURITIES AND EXCHANGE COMMISSION. Please provide a summary of the following text, and cite any sections, rules, acts or laws (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) from context that support the answer. Be detailed in your response.\"\n",
-    "    llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=ctx_len, model_type=\"chat\", is_function_calling_model=True, \n",
+    "    llm = Ollama(model=model_name, url=\"http://127.0.0.1:11434\", context_window=ctx_len, model_type=\"chat\", is_function_calling_model=False, \n",
     "                 request_timeout=4000.0, additional_kwargs=addtion_kwargs) #, system_prompt=system_prompt)\n",
     "    print(llm.metadata)\n",
     "\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,18 +441,18 @@
     "# )\n",
     "\n",
     "\n",
-    "\n",
     "# extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to read each section and link mentions of other sections, rules, or acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) mentioned. If there are no mentions of other sections, rules, or acts, return an empty list.\"\n",
     "# extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to read each section and link other sections, rules, and acts mentioned. What sections, rules, and acts (e.g. § 230.503, § 240.13a-15, Act (15 U.S.C. 781), Investment Company Act of 1940) are mentioned in the content? If there are no mentions, return an empty list.\"\n",
-    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to find semantic, literal, and referential relationships between the sections. If there are no relationships, return an empty list.\"\n",
+    "llm.is_function_calling_model = False\n",
+    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to find semantic, referential, and literal relationships between the sections. If there are no relationships, return an empty list.\"\n",
     "kg_extractor = SimpleLLMPathExtractor(\n",
     "        extract_prompt=extract_prompt,\n",
     "        llm=llm,\n",
     "        max_paths_per_chunk=10,\n",
-    "        num_workers=4,\n",
+    "        num_workers=6,\n",
     "    )\n",
     "\n",
-    "random.shuffle(documents)\n",
+    "# random.shuffle(documents)\n",
     "\n",
     "print(\"Creating graph store...\")\n",
     "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
@@ -464,325 +464,29 @@
     "    neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n",
     "\n",
     "print(\"Creating graphrag index...\")\n",
-    "graph_index = create_neo4j_graphrag(documents, llm, rules_embed_model, kg_extractor, graph_store, graph_idx_persist_dir=graph_idx_persist_dir, graph_store_persist_dir=graph_store_persist_dir, similarity_top_k=5)\n",
+    "graph_index = create_neo4j_graphrag(documents, llm, rules_embed_model, kg_extractor, graph_store, graph_idx_persist_dir=graph_idx_persist_dir, graph_store_persist_dir=graph_store_persist_dir, similarity_top_k=3)\n",
     "\n",
     "dump_neo4j_database('neo4j', '/workspace/data/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_engine = graph_index.as_query_engine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n",
     "graph_store.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core import StorageContext, VectorStoreIndex, PropertyGraphIndex\n",
-    "from rag_utils import create_llama_vector_index_rag\n",
-    "from llama_index.vector_stores.neo4jvector import Neo4jVectorStore\n",
-    "\n",
-    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor, SimpleLLMPathExtractor\n",
-    "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query\n",
-    "import random\n",
-    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to find semantic and literal relationships between the sections. If there are no relationships, return an empty list.\"\n",
-    "kg_extractor = SimpleLLMPathExtractor(\n",
-    "        extract_prompt=extract_prompt,\n",
-    "        llm=llm,\n",
-    "        max_paths_per_chunk=10,\n",
-    "        num_workers=10,\n",
-    "    )\n",
-    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_test2\"\n",
-    "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
-    "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
-    "                                       config={\"connection_timeout\": 1000, \"connection_acquisition_timeout\": 1000, \"max_connection_pool_size\": 1000})\n",
-    "\n",
-    "import json\n",
-    "from llama_index.core.schema import TextNode\n",
-    "\n",
-    "with open(\"/workspace/data/compliance/graph_idx_test2/docstore.json\", \"r\") as f:\n",
-    "    docstore = json.load(f)\n",
-    "\n",
-    "sourcenodes=[]\n",
-    "for key in docstore['docstore/data']:\n",
-    "    sourcenodes.append(TextNode(**docstore['docstore/data'][key][\"__data__\"]))\n",
-    "\n",
-    "\n",
-    "neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n",
-    "# vector_index = Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024)\n",
-    "# storage_context = StorageContext.from_defaults(\n",
-    "#     vector_store=vector_index\n",
-    "# )\n",
-    "# index = VectorStoreIndex.from_documents(\n",
-    "#     documents, storage_context=storage_context\n",
-    "# )\n",
-    "\n",
-    "graph_index = PropertyGraphIndex(sourcenodes, \n",
-    "                                 llm=llm,\n",
-    "                                # vector_store=Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024, hybrid_search=True),\n",
-    "                                property_graph_store=graph_store, \n",
-    "                                embed_model=rules_embed_model, \n",
-    "                                kg_extractors=[kg_extractor],\n",
-    "                                #  transformations=[SentenceSplitter(chunk_size=500, chunk_overlap=50)],\n",
-    "                                show_progress=True,\n",
-    "                                )\n",
-    "graph_index.storage_context.persist(persist_dir=graph_idx_persist_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_engine = graph_index.as_query_engine()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_store.persist(\"/workspace/data/compliance/graph_idx_testymcgee/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_store.get_llama_nodes([key])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core.indices.loading import load_index_from_storage\n",
-    "load_index_from_storage?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_testymcgee\"\n",
-    "graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
-    "                                       password=os.getenv(\"NEO4J_PWD\"), \n",
-    "                                       config={\"connection_timeout\": 1000, \"connection_acquisition_timeout\": 1000, \"max_connection_pool_size\": 1000})\n",
-    "\n",
-    "graph_index = load_index_from_storage(storage_context=StorageContext.from_defaults(graph_store=graph_store, persist_dir=graph_idx_persist_dir), index_id=\"599bfd78-0c6f-4a28-8719-7e4973a0f2bd\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core import StorageContext, VectorStoreIndex, PropertyGraphIndex\n",
-    "from llama_index.core.storage.docstore.simple_docstore import SimpleDocumentStore\n",
-    "from llama_index.graph_stores.neo4j import Neo4jPropertyGraphStore\n",
-    "from rag_utils import create_llama_vector_index_rag\n",
-    "from llama_index.vector_stores.neo4jvector import Neo4jVectorStore\n",
-    "\n",
-    "from llama_index.core.indices.property_graph import SchemaLLMPathExtractor, SimpleLLMPathExtractor\n",
-    "from rag_utils import create_neo4j_graph_store, create_neo4j_graphrag, neo4j_query\n",
-    "import random\n",
-    "\n",
-    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_test2\"\n",
-    "extract_prompt = \"You are an expert compliance officer with vast knowledge of SEC Title 17 Chapter II. Your job is to find semantic and literal relationships between the sections. If there are no relationships, return an empty list.\"\n",
-    "\n",
-    "kg_extractor = SimpleLLMPathExtractor(\n",
-    "        extract_prompt=extract_prompt,\n",
-    "        llm=llm,\n",
-    "        max_paths_per_chunk=10,\n",
-    "        num_workers=10,\n",
-    "    )\n",
-    "\n",
-    "# graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
-    "#                                        password=os.getenv(\"NEO4J_PWD\"), \n",
-    "#                                        config={\"connection_timeout\": 1000, \"connection_acquisition_timeout\": 1000, \"max_connection_pool_size\": 1000})\n",
-    "\n",
-    "neo_url=\"bolt://localhost:7687\"\n",
-    "graph_store = Neo4jPropertyGraphStore(\n",
-    "        username=\"neo4j\",\n",
-    "        password=os.getenv(\"NEO4J_PWD\"),\n",
-    "        url=neo_url,\n",
-    "        database=\"neo4j\",\n",
-    "    )\n",
-    "\n",
-    "# neo4j_query(graph_store, query=\"\"\"MATCH n=() DETACH DELETE n\"\"\")\n",
-    "\n",
-    "# with open(graph_idx_persist_dir+'/docstore.json', \"r\") as f:\n",
-    "#     docstore = json.load(f)\n",
-    "# with open(graph_idx_persist_dir+'/index_store.json', \"r\") as f:\n",
-    "    # index_store = json.load(f)\n",
-    "\n",
-    "graph_index=PropertyGraphIndex.from_existing(\n",
-    "                                 property_graph_store=graph_store,\n",
-    "                                 llm=llm,\n",
-    "                                #  vector_store=Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024, hybrid_search=True),\n",
-    "                                 kg_extractor=[ kg_extractor ], \n",
-    "                                 embed_kg_nodes=True,\n",
-    "                                 embed_model=rules_embed_model,\n",
-    "                                 storage_context=StorageContext.from_defaults(persist_dir=graph_idx_persist_dir),\n",
-    "                                 show_progress=True\n",
-    "                                 )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_store = Neo4jPropertyGraphStore(\n",
-    "        username=\"neo4j\",\n",
-    "        password=os.getenv(\"NEO4J_PWD\"),\n",
-    "        url=neo_url,\n",
-    "        database=\"neo4j\",\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "with open(graph_idx_persist_dir+'/docstore.json', \"r\") as f:\n",
-    "    docstore = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "docstore['docstore/data'][list(docstore['docstore/data'].keys())[0]]['__data__']['relationships']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_store."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.graph_stores.neo4j import Neo4jPropertyGraphStore\n",
-    "Neo4jPropertyGraphStore?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.core import StorageContext, load_index_from_storage\n",
-    "from llama_index.graph_stores.neo4j import Neo4jPropertyGraphStore\n",
-    "\n",
-    "# graph_store = create_neo4j_graph_store(neo_url=\"bolt://localhost:7687\", \n",
-    "#                                        password=os.getenv(\"NEO4J_PWD\"), \n",
-    "#                                        config={\"connection_timeout\": 1000, \"connection_acquisition_timeout\": 1000, \"max_connection_pool_size\": 1000})\n",
-    "\n",
-    "graph_idx_persist_dir = \"/workspace/data/compliance/graph_idx_test2\"\n",
-    "\n",
-    "neo_url=\"bolt://localhost:7687\"\n",
-    "graph_store = Neo4jPropertyGraphStore(\n",
-    "        username=\"neo4j\",\n",
-    "        password=os.getenv(\"NEO4J_PWD\"),\n",
-    "        url=neo_url,\n",
-    "        database=\"neo4j\",\n",
-    "    )\n",
-    "\n",
-    "storage_context = StorageContext.from_defaults(graph_store=graph_store,\n",
-    "                                               persist_dir=graph_idx_persist_dir)\n",
-    "\n",
-    "# graph_index = load_index_from_storage(storage_context)\n",
-    "graph_index=PropertyGraphIndex.from_existing(\n",
-    "                                 property_graph_store=graph_store,\n",
-    "                                 llm=llm,\n",
-    "                                 vector_store=Neo4jVectorStore('neo4j', os.getenv(\"NEO4J_PWD\"), \"bolt://localhost:7687\", embedding_dimension=1024, hybrid_search=True),\n",
-    "                                 kg_extractor=[ kg_extractor ], \n",
-    "                                 embed_kg_nodes=True,\n",
-    "                                 embed_model=rules_embed_model,\n",
-    "                                 storage_context=StorageContext.from_defaults(\n",
-    "                                                                              # docstore=SimpleDocumentStore.from_persist_dir(graph_idx_persist_dir),\n",
-    "                                                                            #   docstore=SimpleDocumentStore.from_persist_dir(graph_idx_persist_dir+'/docstore.json'),\n",
-    "                                                                              # property_graph_store=graph_store,\n",
-    "                                                                            #   index_store=index_store,\n",
-    "                                                                              persist_dir=graph_idx_persist_dir\n",
-    "                                                                             ),\n",
-    "                                 show_progress=True\n",
-    "                                 )\n",
-    "\n",
-    "query_engine = graph_index.as_query_engine()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if graph_idx_persist_dir is not None: graph_index.storage_context.persist(persist_dir=graph_idx_persist_dir)\n",
-    "# graph_store.persist(\"/workspace/data/compliance/vector_index\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -814,21 +518,21 @@
     "    response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
     ")\n",
     "\n",
-    "Settings.chunk_size = 500\n",
-    "Settings.chunk_overlap = 20\n",
+    "# Settings.chunk_size = 500\n",
+    "# Settings.chunk_overlap = 20\n",
     "\n",
-    "rules_vector_index = create_llama_vector_index_rag(llm, rules_embed_model, documents=documents)\n",
-    "graph_index = rules_vector_index.as_query_engine(\n",
-    "    similarity_top_k=3,\n",
-    "    # node_postprocessors=[\n",
-    "    #     LLMRerank(\n",
-    "    #         choice_batch_size=5,\n",
-    "    #         top_n=2,\n",
-    "    #     )\n",
-    "    # ],\n",
-    "    # see https://github.com/run-llama/llama_index/blob/f7c5ee5efbb6172e819f26d1705fcdf6114b11a3/llama-index-core/llama_index/core/response_synthesizers/type.py#L4\n",
-    "    response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
-    ")"
+    "# rules_vector_index = create_llama_vector_index_rag(llm, rules_embed_model, documents=documents)\n",
+    "# graph_index = rules_vector_index.as_query_engine(\n",
+    "#     similarity_top_k=3,\n",
+    "#     # node_postprocessors=[\n",
+    "#     #     LLMRerank(\n",
+    "#     #         choice_batch_size=5,\n",
+    "#     #         top_n=2,\n",
+    "#     #     )\n",
+    "#     # ],\n",
+    "#     # see https://github.com/run-llama/llama_index/blob/f7c5ee5efbb6172e819f26d1705fcdf6114b11a3/llama-index-core/llama_index/core/response_synthesizers/type.py#L4\n",
+    "#     response_mode=\"tree_summarize\", # \"accumulate\", \"compact_accumulate\", \"compact\", \"simple_summarize\", \"tree_summarize\"\n",
+    "# )"
    ]
   },
   {
@@ -1026,6 +730,8 @@
    "source": [
     "from llama_index.core.tools import FunctionTool\n",
     "from llama_index.llms.openai import OpenAI\n",
+    "\n",
+    "llm.is_function_calling_model = True\n",
     "\n",
     "agent = FuncationCallingAgent(\n",
     "    llm=llm, tools=all_tools, timeout=120, verbose=True\n",
